--- a/index.html
+++ b/index.html
@@ -1,24 +1,148 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Welcome to DALANI</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DALANI | Creative Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fefefe;
+      color: #2e2e2e;
+    }
+
+    header {
+      background-color: #8e44ad;
+      padding: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo img {
+      height: 50px;
+      border-radius: 50%;
+    }
+
+    .logo span {
+      color: #fff;
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    nav a {
+      color: #fff;
+      margin-left: 20px;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #8e44ad;
+    }
+
+    footer {
       text-align: center;
-      padding: 100px;
+      background-color: #8e44ad;
+      color: white;
+      padding: 20px;
     }
-    h1 {
-      color: #333;
+
+    .contact input, .contact textarea {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
     }
-    p {
-      color: #666;
+
+    .contact button {
+      background: #8e44ad;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      cursor: pointer;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 10px;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to DALANI</h1>
-  <p>This is your new website, proudly powered by GitHub Pages 🎉</p>
+
+  <header>
+    <div class="logo">
+      <img src="https://raw.githubusercontent.com/Dalani31/DALANI/main/logo.jpeg" alt="DALANI Logo" />
+      <span>@DALANI31</span>
+    </div>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#testimonials">Testimonials</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am DALANI — a digital creative designer. I design logos, emojis, banners, GIFs, websites, memes, and more.</p>
+  </section>
+
+  <section id="services">
+    <h2>Services</h2>
+    <ul>
+      <li>Custom Emojis & Stickers</li>
+      <li>Logo & Banner Design</li>
+      <li>Web & Domain Design</li>
+      <li>Welcome GIFs, Viral Videos & Memes</li>
+      <li>NFT Artwork Creation</li>
+    </ul>
+  </section>
+
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <p>Showcase your work here – upload images to GitHub and embed them.</p>
+  </section>
+
+  <section id="testimonials">
+    <h2>Testimonials</h2>
+    <p>“DALANI is 🔥 — best designs I’ve ever seen!” – Happy Client</p>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Me</h2>
+    <form>
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea placeholder="Your Message" rows="5" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <footer>
+    &copy; 2025 DALANI31 – All Rights Reserved.
+  </footer>
+
 </body>
 </html>
