--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DALANI | Creative Portfolio</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
       background-color: #fefefe;
       color: #2e2e2e;
     }
 
     header {
       background-color: #8e44ad;
-      padding: 20px;
+      padding: 15px 20px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
     .logo {
@@ -28,44 +36,76 @@
     }
 
     .logo img {
-      height: 50px;
+      height: 45px;
       border-radius: 50%;
     }
 
     .logo span {
       color: #fff;
-      font-size: 24px;
+      font-size: 22px;
       font-weight: bold;
+    }
+
+    nav {
+      display: flex;
+      gap: 20px;
     }
 
     nav a {
       color: #fff;
-      margin-left: 20px;
       text-decoration: none;
       font-weight: 500;
     }
 
+    .menu-toggle {
+      display: none;
+      font-size: 24px;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+        flex-direction: column;
+        background-color: #8e44ad;
+        position: absolute;
+        top: 70px;
+        right: 0;
+        width: 100%;
+        padding: 20px;
+      }
+
+      nav.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: block;
+      }
+    }
+
     section {
-      padding: 60px 20px;
+      padding: 80px 20px;
       max-width: 1000px;
       margin: auto;
     }
 
     h2 {
       color: #8e44ad;
+      margin-bottom: 15px;
     }
 
-    footer {
-      text-align: center;
-      background-color: #8e44ad;
-      color: white;
-      padding: 20px;
+    ul li {
+      margin-bottom: 8px;
     }
 
-    .contact input, .contact textarea {
+    .contact input,
+    .contact textarea {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
+      border: 1px solid #ccc;
     }
 
     .contact button {
@@ -76,15 +116,12 @@
       cursor: pointer;
     }
 
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 10px;
-      }
+    footer {
+      text-align: center;
+      background-color: #8e44ad;
+      color: white;
+      padding: 20px;
+      margin-top: 40px;
     }
   </style>
 </head>
@@ -95,7 +132,8 @@
       <img src="https://raw.githubusercontent.com/Dalani31/DALANI/main/logo.jpeg" alt="DALANI Logo" />
       <span>@DALANI31</span>
     </div>
-    <nav>
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+    <nav id="navbar">
       <a href="#about">About</a>
       <a href="#services">Services</a>
       <a href="#gallery">Gallery</a>
@@ -106,7 +144,7 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am DALANI — a digital creative designer. I design logos, emojis, banners, GIFs, websites, memes, and more.</p>
+    <p>I am DALANI — a digital creative designer. I create logos, emojis, banners, GIFs, websites, memes, NFTs, and more.</p>
   </section>
 
   <section id="services">
@@ -122,7 +160,7 @@
 
   <section id="gallery">
     <h2>Gallery</h2>
-    <p>Showcase your work here – upload images to GitHub and embed them.</p>
+    <p>Showcase your designs here. Upload images to GitHub and embed them here later.</p>
   </section>
 
   <section id="testimonials">
@@ -144,5 +182,11 @@
     &copy; 2025 DALANI31 – All Rights Reserved.
   </footer>
 
+  <script>
+    function toggleMenu() {
+      const navbar = document.getElementById('navbar');
+      navbar.classList.toggle('show');
+    }
+  </script>
 </body>
 </html>
