--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: #fefefe;
       color: #2e2e2e;
+      line-height: 1.6;
     }
 
     header {
@@ -86,7 +87,7 @@
     }
 
     section {
-      padding: 80px 20px;
+      padding: 80px 30px;
       max-width: 1000px;
       margin: auto;
     }
@@ -94,10 +95,16 @@
     h2 {
       color: #8e44ad;
       margin-bottom: 15px;
+      font-size: 28px;
     }
 
-    ul li {
-      margin-bottom: 8px;
+    p, li {
+      font-size: 17px;
+      margin-bottom: 10px;
+    }
+
+    ul {
+      padding-left: 20px;
     }
 
     .contact input,
@@ -129,7 +136,7 @@
 
   <header>
     <div class="logo">
-      <img src="https://raw.githubusercontent.com/Dalani31/DALANI/main/logo.jpeg" alt="DALANI Logo" />
+      <img src="logo.jpeg" alt="DALANI Logo" />
       <span>@DALANI31</span>
     </div>
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
@@ -188,5 +195,6 @@
       navbar.classList.toggle('show');
     }
   </script>
+
 </body>
 </html>
