--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     }
 
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #fefefe;
-      color: #2e2e2e;
-      line-height: 1.6;
-    }
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(to right, #fefcea, #f1e1ff);
+  color: #2e2e2e;
+  line-height: 1.6;
+}
 
     header {
       background-color: #8e44ad;
@@ -171,9 +171,13 @@
   </section>
 
   <section id="testimonials">
-    <h2>Testimonials</h2>
-    <p>“DALANI is 🔥 — best designs I’ve ever seen!” – Happy Client</p>
-  </section>
+  <h2>Testimonials</h2>
+  <p>“DALANI is 🔥 — best designs I’ve ever seen!” – Happy Client</p>
+  <p>“Quick delivery and stunning creativity. Highly recommended.” – Linda G.</p>
+  <p>“Every piece feels custom and unique. You won’t regret working with DALANI.” – MotionFX Studio</p>
+  <p>“My brand went viral thanks to the memes and GIFs he made!” – DME Clothing</p>
+  <p>“5 stars. Professional, fast, and unbelievably good.” – SamTrix</p>
+</section>
 
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
