--- a/index.html
+++ b/index.html
@@ -168,6 +168,28 @@
       color: white;
     }
 
+
+    .social-btn {
+      color: #ffffff;
+      margin: 0 10px;
+      text-decoration: none;
+      font-weight: 500;
+      background: #732d91;
+      padding: 10px 18px;
+      border-radius: 30px;
+      display: inline-block;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .social-btn:hover {
+      background: #ffffff;
+      color: #8e44ad;
+    }
+
+    .social-links {
+      margin-top: 15px;
+    }
+
 </style>
 </head>
 <body>
@@ -247,7 +269,19 @@
 
   <footer>
     <p>© 2025 DALANI. All rights reserved.</p>
-  </footer>
+
+  <div class="social-links">
+    <a class="social-btn" href="https://x.com/dalani31?s=21" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/733/733579.png" alt="Twitter" style="vertical-align: middle; margin-right: 6px;" />
+      Follow me on Twitter
+    </a>
+    <a class="social-btn" href="https://t.me/+lbfagjUH4FY4MmE1" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/2111/2111646.png" alt="Telegram" style="vertical-align: middle; margin-right: 6px;" />
+      Join my Telegram Channel
+    </a>
+  </div>
+</footer>
+
 
 </body>
 </html>
