--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <title>DALANI | Creative Portfolio</title>
 
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #fefcea, #f1e1ff);
-      color: #2e2e2e;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
+    
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: url('logo.jpeg') no-repeat center center fixed;
+  background-size: cover;
+  color: #333;
+}
+
 
     header {
       background-color: #8e44ad;
@@ -168,28 +170,6 @@
       color: white;
     }
 
-
-    .social-btn {
-      color: #ffffff;
-      margin: 0 10px;
-      text-decoration: none;
-      font-weight: 500;
-      background: #732d91;
-      padding: 10px 18px;
-      border-radius: 30px;
-      display: inline-block;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    .social-btn:hover {
-      background: #ffffff;
-      color: #8e44ad;
-    }
-
-    .social-links {
-      margin-top: 15px;
-    }
-
 </style>
 </head>
 <body>
@@ -269,19 +249,7 @@
 
   <footer>
     <p>© 2025 DALANI. All rights reserved.</p>
-
-  <div class="social-links">
-    <a class="social-btn" href="https://x.com/dalani31?s=21" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/24/733/733579.png" alt="Twitter" style="vertical-align: middle; margin-right: 6px;" />
-      Follow me on Twitter
-    </a>
-    <a class="social-btn" href="https://t.me/+lbfagjUH4FY4MmE1" target="_blank">
-      <img src="https://cdn-icons-png.flaticon.com/24/2111/2111646.png" alt="Telegram" style="vertical-align: middle; margin-right: 6px;" />
-      Join my Telegram Channel
-    </a>
-  </div>
-</footer>
-
+  </footer>
 
 </body>
 </html>
