--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ body {
   margin: 0;
   padding: 0;
   background: url('logo.jpeg') no-repeat center center fixed;
-  background-size: cover;
+  background-size: contain;
+  background-color: #000; /* fallback background color */
+  background-repeat: no-repeat;
   color: #333;
 }
 
