--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ body {
   padding: 0;
   background: url('logo.jpeg') no-repeat center center fixed;
   background-size: contain;
-  background-color: #000; /* fallback background color */
   background-repeat: no-repeat;
+  background-color: transparent;
   color: #333;
 }
 
