--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
   <title>DALANI | Creative Portfolio</title>
 
   <style>
-    
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background: url('logo.jpeg') no-repeat center center fixed;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-color: transparent;
-  color: #333;
-}
-
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #fefcea, #f1e1ff);
+      color: #2e2e2e;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
 
     header {
       background-color: #8e44ad;
@@ -251,7 +247,13 @@ body {
 
   <footer>
     <p>© 2025 DALANI. All rights reserved.</p>
-  </footer>
+
+  <div class="social-links">
+    <a href="https://x.com/dalani31?s=21" target="_blank">🐦 @Dalani31</a>
+    <a href="https://t.me/+lbfagjUH4FY4MmE1" target="_blank">📲 Telegram Channel</a>
+  </div>
+</footer>
+
 
 </body>
 </html>
