--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #fefcea, #f1e1ff);
-      color: #2e2e2e;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to bottom right, #f7e6ff, #e3d1ff, #c8afff);
+  color: #333;
+}
 
     header {
       background-color: #8e44ad;
