--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background: linear-gradient(to bottom right, #f7e6ff, #e3d1ff, #c8afff);
-  color: #333;
+  background: linear-gradient(to bottom right, #000000, #1c003d, #2e0066, #440080);
+  color: #ffffff;
 }
 
     header {
